--- a/Huixiang/en.lproj/MainStoryboard.storyboard
+++ b/Huixiang/en.lproj/MainStoryboard.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="js0-bg-SdU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="js0-bg-SdU">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--View Controller - 茴香-->
+        <!--茴香-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
@@ -29,7 +29,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="茴香" id="Xpm-Jx-8Tk">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="mYu-Ai-qwb">
+                        <barButtonItem key="rightBarButtonItem" image="pen-btn.png" style="plain" id="mYu-Ai-qwb">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="8qC-fB-8oU">
                                 <rect key="frame" x="282" y="11" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,16 +45,74 @@
                                     <action selector="share:" destination="2" eventType="touchUpInside" id="MXg-hM-LOo"/>
                                 </connections>
                             </button>
+                            <connections>
+                                <segue destination="twP-bF-QhM" kind="modal" identifier="addPiece" id="Iqg-5Z-7d9"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="carousel" destination="Jqx-Wq-Ize" id="Ot9-DD-7Ec"/>
-                        <segue destination="U37-Xi-6Mk" kind="modal" identifier="auth" modalTransitionStyle="crossDissolve" id="sLl-5O-1fY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1701" y="14"/>
+            <point key="canvasLocation" x="-1686" y="50"/>
+        </scene>
+        <!--记录-->
+        <scene sceneID="K9q-SQ-8j5">
+            <objects>
+                <viewController id="twP-bF-QhM" userLabel="记录" customClass="AddPieceController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="o10-rQ-m9j">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="ER4-mx-jqz">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="记录" id="75C-fc-b0M">
+                                        <barButtonItem key="leftBarButtonItem" title="取消" id="gG7-p3-6us">
+                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <segue destination="Cek-4x-2lN" kind="unwind" identifier="backToHome" unwindAction="finishAddPiece:" id="hed-gi-49K"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="发送" id="a7u-7d-UB1">
+                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="sendContent:" destination="twP-bF-QhM" id="419-0V-24X"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                                <connections>
+                                    <outlet property="delegate" destination="twP-bF-QhM" id="f4K-Gq-PKy"/>
+                                </connections>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="A8E-be-Ytg" customClass="UIPlaceHolderTextView">
+                                <rect key="frame" x="0.0" y="64" width="320" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="写点什么"/>
+                                </userDefinedRuntimeAttributes>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.81176470590000005" green="0.76862745099999996" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="BcH-o5-I5F">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="PHx-eE-T4h"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="writingTextfield" destination="A8E-be-Ytg" id="HzZ-1N-ZbQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zwj-ci-KLi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Cek-4x-2lN" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-1191" y="50"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="crY-hy-g4A">
@@ -76,7 +134,7 @@
             </objects>
             <point key="canvasLocation" x="-2857" y="653"/>
         </scene>
-        <!--Collection View Controller - 收藏-->
+        <!--收藏-->
         <scene sceneID="4na-oQ-tva">
             <objects>
                 <viewController id="dkN-Yb-ciQ" customClass="CollectionViewController" sceneMemberID="viewController">
@@ -164,7 +222,7 @@
             </objects>
             <point key="canvasLocation" x="-1701" y="601"/>
         </scene>
-        <!--Sina Weibo Auth View Controller - 授权-->
+        <!--授权-->
         <scene sceneID="7iU-vX-la4">
             <objects>
                 <viewController id="8r3-rh-CAN" customClass="SinaWeiboAuthViewController" sceneMemberID="viewController">
@@ -206,9 +264,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n2R-vM-jbl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-544" y="601"/>
+            <point key="canvasLocation" x="-12" y="601"/>
         </scene>
-        <!--Settings View Controller - 设置-->
+        <!--设置-->
         <scene sceneID="I04-pv-zlY">
             <objects>
                 <tableViewController id="GuY-TO-zhn" customClass="SettingsViewController" sceneMemberID="viewController">
@@ -217,7 +275,6 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.81176470590000005" green="0.76862745099999996" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="syE-j5-U9l">
-                            <rect key="frame" x="0.0" y="64" width="320" height="0.0"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
@@ -232,7 +289,6 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="xTv-cD-liz">
-                                                    <rect key="frame" x="11" y="11" width="0.0" height="0.0"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -327,7 +383,6 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="qCN-uF-EEg">
-                                                    <rect key="frame" x="11" y="11" width="0.0" height="0.0"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -374,7 +429,7 @@
             </objects>
             <point key="canvasLocation" x="-1701" y="1296"/>
         </scene>
-        <!--Navigation Controller - 每日-->
+        <!--每日-->
         <scene sceneID="d2T-ST-LEl">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PiY-cF-zFc" sceneMemberID="viewController">
@@ -393,7 +448,7 @@
             </objects>
             <point key="canvasLocation" x="-2227" y="14"/>
         </scene>
-        <!--Navigation Controller - Item-->
+        <!--Item-->
         <scene sceneID="GoN-qU-kJv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="U37-Xi-6Mk" sceneMemberID="viewController">
@@ -412,7 +467,7 @@
             </objects>
             <point key="canvasLocation" x="-1074" y="645"/>
         </scene>
-        <!--Navigation Controller - Item-->
+        <!--Item-->
         <scene sceneID="1HQ-83-W5B">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a3P-0D-2yp" sceneMemberID="viewController">
@@ -431,7 +486,7 @@
             </objects>
             <point key="canvasLocation" x="-2227" y="1296"/>
         </scene>
-        <!--Navigation Controller - 收藏-->
+        <!--收藏-->
         <scene sceneID="bWb-pn-5ok">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="e7H-Nx-koO" sceneMemberID="viewController">
@@ -454,6 +509,7 @@
     </scenes>
     <resources>
         <image name="back-btn.png" width="64" height="64"/>
+        <image name="pen-btn.png" width="84" height="85"/>
         <image name="quill.png" width="64" height="64"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
