--- a/Huixiang/en.lproj/MainStoryboard.storyboard
+++ b/Huixiang/en.lproj/MainStoryboard.storyboard
@@ -4,6 +4,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="typicons.ttf">
+            <string>typicons</string>
+            <string>typicons</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--茴香-->
         <scene sceneID="5">
@@ -29,7 +35,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="茴香" id="Xpm-Jx-8Tk">
-                        <barButtonItem key="rightBarButtonItem" image="pen-btn.png" style="plain" id="mYu-Ai-qwb">
+                        <barButtonItem key="rightBarButtonItem" title="Item" style="plain" id="mYu-Ai-qwb">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="8qC-fB-8oU">
                                 <rect key="frame" x="282" y="11" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -69,18 +75,16 @@
                             <navigationBar contentMode="scaleToFill" id="ER4-mx-jqz">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="记录" id="75C-fc-b0M">
-                                        <barButtonItem key="leftBarButtonItem" title="取消" id="gG7-p3-6us">
-                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <barButtonItem key="leftBarButtonItem" title="返回" id="gG7-p3-6us">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <connections>
                                                 <segue destination="Cek-4x-2lN" kind="unwind" identifier="backToHome" unwindAction="finishAddPiece:" id="hed-gi-49K"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="发送" id="a7u-7d-UB1">
-                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <connections>
-                                                <action selector="sendContent:" destination="twP-bF-QhM" id="419-0V-24X"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -90,7 +94,7 @@
                                 </connections>
                             </navigationBar>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="A8E-be-Ytg" customClass="UIPlaceHolderTextView">
-                                <rect key="frame" x="0.0" y="64" width="320" height="128"/>
+                                <rect key="frame" x="7" y="75" width="303" height="188"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -99,6 +103,34 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="写点什么"/>
                                 </userDefinedRuntimeAttributes>
                             </textView>
+                            <view contentMode="scaleToFill" id="fb5-Qd-57W">
+                                <rect key="frame" x="7" y="225" width="303" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="auS-xo-rxu">
+                                        <rect key="frame" x="10" y="5" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="typicons" family="Typicons" pointSize="16"/>
+                                        <state key="normal" title="">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="uploadImage:" destination="twP-bF-QhM" eventType="touchUpInside" id="tAp-5O-Kzu"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W86-Tn-vuY">
+                                        <rect key="frame" x="40" y="5" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="typicons" family="Typicons" pointSize="15"/>
+                                        <state key="normal" title="">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.81176470590000005" green="0.76862745099999996" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -106,6 +138,8 @@
                         <barButtonItem key="rightBarButtonItem" title="Item" id="PHx-eE-T4h"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="back" destination="gG7-p3-6us" id="Y45-28-n4v"/>
+                        <outlet property="imageUploadButton" destination="auS-xo-rxu" id="fsT-MO-chN"/>
                         <outlet property="writingTextfield" destination="A8E-be-Ytg" id="HzZ-1N-ZbQ"/>
                     </connections>
                 </viewController>
@@ -509,7 +543,6 @@
     </scenes>
     <resources>
         <image name="back-btn.png" width="64" height="64"/>
-        <image name="pen-btn.png" width="84" height="85"/>
         <image name="quill.png" width="64" height="64"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
