--- a/Huixiang/en.lproj/MainStoryboard.storyboard
+++ b/Huixiang/en.lproj/MainStoryboard.storyboard
@@ -72,10 +72,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" id="ER4-mx-jqz">
+                            <navigationBar contentMode="scaleToFill" translucent="NO" id="ER4-mx-jqz">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="barTintColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </textAttributes>
@@ -129,8 +128,15 @@
                                         </state>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.23529411764705882" green="0.22745098039215686" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/250" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SbG-ek-lfW">
+                                <rect key="frame" x="218" y="206" width="86" height="14"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.81176470590000005" green="0.76862745099999996" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -140,6 +146,7 @@
                     <connections>
                         <outlet property="back" destination="gG7-p3-6us" id="Y45-28-n4v"/>
                         <outlet property="imageUploadButton" destination="auS-xo-rxu" id="fsT-MO-chN"/>
+                        <outlet property="textCounter" destination="SbG-ek-lfW" id="6F6-fb-ZB0"/>
                         <outlet property="writingTextfield" destination="A8E-be-Ytg" id="HzZ-1N-ZbQ"/>
                     </connections>
                 </viewController>
