--- a/Huixiang/en.lproj/MainStoryboard.storyboard
+++ b/Huixiang/en.lproj/MainStoryboard.storyboard
@@ -155,6 +155,10 @@
                                 <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="6Qz-nd-qBD">
+                                <rect key="frame" x="94" y="271" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.81176470590000005" green="0.76862745099999996" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -164,6 +168,7 @@
                     <connections>
                         <outlet property="back" destination="gG7-p3-6us" id="Y45-28-n4v"/>
                         <outlet property="imageUploadButton" destination="auS-xo-rxu" id="fsT-MO-chN"/>
+                        <outlet property="imageView" destination="6Qz-nd-qBD" id="qeC-06-6lH"/>
                         <outlet property="textCounter" destination="SbG-ek-lfW" id="6F6-fb-ZB0"/>
                         <outlet property="writingTextfield" destination="A8E-be-Ytg" id="HzZ-1N-ZbQ"/>
                     </connections>
@@ -564,6 +569,19 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eog-xY-IDI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2227" y="653"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dqP-Tt-1bQ">
+            <objects>
+                <viewController id="bd5-Ww-SbF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rTS-SY-VaO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QfM-w8-dqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
